# BOTM8

./: .gitignore  Cargo.toml  commands.ron
src/: dev_commands.rs  emotes.rs  main.rs  secrets.rs
