[package]
name = "discord"
version = "1.1.0"
authors = ["devon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
serenity = { version = "^0.10", default-features = false, features = ["cache", "client", "gateway", "model", "framework", "standard_framework", "voice"] }
date_time = { git = "https://github.com/flauntingspade4/date_time", features = ["serde_support"] }
serde = { version = "^1.0", features = ["derive"] }
ron = "^0.6"
songbird = "0.2.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]


